--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ email: digpasts@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Evaluation of Natural Language Processing (NLP) tools
   for the Akkadian language
-baseurl: "" # the subpath of your site, e.g. /blog
-url: https://chendwend.github.io/EvaCun/ # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: /EvaCun # the subpath of your site, e.g. /blog
+url: https://chendwend.github.io # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
