--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: This is the website for EvaCun
+title: EvaCun
 email: digpasts@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Evaluation of Natural Language Processing (NLP) tools
   for the Akkadian language
 baseurl: /EvaCun # the subpath of your site, e.g. /blog
 url: https://chendwend.github.io # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: DigPastsLab
+github_username:  DigitalPasts
+twitter: "https://twitter.com/DigPastsLab"
+twitter-handle: "@DigPastsLab"
+github: "https://github.com/DigitalPasts"
 
 # Build settings
 theme: minima
@@ -52,3 +55,12 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+header_pages: 
+- about.markdown
+- task.markdown
+- registration.markdown
+- submission.markdown
+- data.markdown
+- Resources.markdown
+- Organizers.markdown
